--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
         "axios": "^1.6.2",
         "body-parser": "^1.20.1",
         "express": "^4.18.2",
-        "mongoose": "^8.0.3"
+        "mongodb": "^6.3.0",
+        "mongodb-core": "^3.2.7",
+        "mongoose": "^8.0.3",
+        "router": "^1.3.8"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
